--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#F9FAFB</color>
-    <color name="gray">#DBDBDB</color>
+    <color name="gray">#F5F5F5</color>
     <color name="dark">#111827</color>
     <color name="purple">#9333EA</color>
     <color name="red">#EF4444</color>
