--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -155,120 +155,131 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_umidade"
-                            android:layout_width="250dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_marginRight="20dp"
-                            app:cardBackgroundColor="#E7FBEA"
-                            app:cardCornerRadius="10dp">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="370dp"
+                            android:layout_height="140dp">
 
-                            <ImageView
-                                android:id="@+id/imageView4"
-                                android:layout_width="80dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="right|center_vertical"
-                                android:layout_marginRight="20dp"
-                                app:srcCompat="@drawable/iconuvem" />
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/card_temp"
+                                android:layout_width="250dp"
+                                android:layout_height="140dp"
+                                android:layout_gravity="center"
+                                app:cardBackgroundColor="#FFFBEB"
+                                app:cardCornerRadius="10dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent">
 
-                            <TextView
-                                android:id="@+id/textView7"
-                                android:layout_width="57dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="8dp"
-                                android:text="Umidade"
-                                android:textColorLink="#009688"
-                                android:textSize="8sp" />
+                                <ImageView
+                                    android:id="@+id/imageView3"
+                                    android:layout_width="80dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right|center_vertical"
+                                    android:layout_marginRight="20dp"
+                                    app:srcCompat="@drawable/icotemperatura" />
 
-                            <TextView
-                                android:id="@+id/txt_value_umidade"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="10dp"
-                                android:text="54"
-                                android:textColorLink="#009688"
-                                android:textSize="48sp" />
+                                <TextView
+                                    android:id="@+id/textView9"
+                                    android:layout_width="57dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="8dp"
+                                    android:text="Temperatura"
+                                    android:textColorLink="#009688"
+                                    android:textSize="8sp" />
 
-                            <TextView
-                                android:id="@+id/textView8"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="70dp"
-                                android:text="%"
-                                android:textColorLink="#009688"
-                                android:textSize="34sp" />
+                                <TextView
+                                    android:id="@+id/txt_value_temp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:text="32"
+                                    android:textColorLink="#009688"
+                                    android:textSize="48sp" />
 
-                            <TextView
-                                android:id="@+id/txt_status_sensor_umidade"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginBottom="10dp"
-                                android:text="Status Sensor"
-                                android:textSize="10sp" />
-                        </androidx.cardview.widget.CardView>
+                                <TextView
+                                    android:id="@+id/textView10"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="70dp"
+                                    android:text="°"
+                                    android:textColorLink="#009688"
+                                    android:textSize="34sp" />
 
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/card_temp"
-                            android:layout_width="250dp"
-                            android:layout_height="140dp"
-                            android:layout_gravity="center"
-                            app:cardBackgroundColor="#FFFBEB"
-                            app:cardCornerRadius="10dp">
+                                <TextView
+                                    android:id="@+id/txt_status_sensor_temp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="bottom"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:text="Status Sensor"
+                                    android:textSize="10sp" />
+                            </androidx.cardview.widget.CardView>
 
-                            <ImageView
-                                android:id="@+id/imageView3"
-                                android:layout_width="80dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="right|center_vertical"
-                                android:layout_marginRight="20dp"
-                                app:srcCompat="@drawable/icotemperatura" />
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/card_umidade"
+                                android:layout_width="250dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="20dp"
+                                app:cardBackgroundColor="#E7FBEA"
+                                app:cardCornerRadius="10dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toEndOf="@+id/card_temp"
+                                app:layout_constraintTop_toTopOf="parent">
 
-                            <TextView
-                                android:id="@+id/textView9"
-                                android:layout_width="57dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="8dp"
-                                android:text="Temperatura"
-                                android:textColorLink="#009688"
-                                android:textSize="8sp" />
+                                <ImageView
+                                    android:id="@+id/imageView4"
+                                    android:layout_width="80dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right|center_vertical"
+                                    android:layout_marginRight="20dp"
+                                    app:srcCompat="@drawable/iconuvem" />
 
-                            <TextView
-                                android:id="@+id/txt_value_temp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="10dp"
-                                android:text="32"
-                                android:textColorLink="#009688"
-                                android:textSize="48sp" />
+                                <TextView
+                                    android:id="@+id/textView7"
+                                    android:layout_width="57dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="8dp"
+                                    android:text="Umidade"
+                                    android:textColorLink="#009688"
+                                    android:textSize="8sp" />
 
-                            <TextView
-                                android:id="@+id/textView10"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="70dp"
-                                android:text="°"
-                                android:textColorLink="#009688"
-                                android:textSize="34sp" />
+                                <TextView
+                                    android:id="@+id/txt_value_umidade"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:text="54"
+                                    android:textColorLink="#009688"
+                                    android:textSize="48sp" />
 
-                            <TextView
-                                android:id="@+id/txt_status_sensor_temp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginBottom="10dp"
-                                android:text="Status Sensor"
-                                android:textSize="10sp" />
-                        </androidx.cardview.widget.CardView>
+                                <TextView
+                                    android:id="@+id/textView8"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="70dp"
+                                    android:text="%"
+                                    android:textColorLink="#009688"
+                                    android:textSize="34sp" />
+
+                                <TextView
+                                    android:id="@+id/txt_status_sensor_umidade"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="bottom"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:text="Status Sensor"
+                                    android:textSize="10sp" />
+                            </androidx.cardview.widget.CardView>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </LinearLayout>
                 </ScrollView>
@@ -425,8 +436,8 @@
                             android:id="@+id/txt_dados_recebidos"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="7dp"
-                            android:layout_marginVertical="5dp"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginVertical="10dp"
                             android:text="Dados recebidos: ..."
                             android:textSize="12sp" />
                     </LinearLayout>
