--- a/app/src/main/res/layout/graphics_activity.xml
+++ b/app/src/main/res/layout/graphics_activity.xml
@@ -38,7 +38,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="950dp">
+                android:layout_height="980dp">
 
                 <ListView
                     android:id="@+id/list_items_devices"
@@ -54,7 +54,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardViewTemperatura"
                     android:layout_width="0dp"
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/purple_soft"
                     app:cardBackgroundColor="@color/gray"
@@ -64,12 +64,21 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/list_items_devices">
 
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/chartTemp"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:layout_gravity="center|center_horizontal|center_vertical"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginVertical="10dp" />
+
                     <TextView
                         android:id="@+id/textTitleCardTemp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginBottom="1dp"
                         android:text="Temperatura"
                         android:textColor="@color/purple" />
                 </androidx.cardview.widget.CardView>
@@ -77,7 +86,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardViewUmidade"
                     android:layout_width="0dp"
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:layout_marginTop="20dp"
                     android:background="@color/purple_soft"
                     app:cardBackgroundColor="@color/gray"
@@ -88,39 +97,23 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cardViewTemperatura">
 
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/chartHumidity"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:layout_gravity="center|center_horizontal|center_vertical"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginVertical="10dp" />
+
                     <TextView
                         android:id="@+id/textTitleCardHumidity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginBottom="1dp"
                         android:text="Umidade"
                         android:textColor="@color/blue" />
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewLuminosidade"
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/purple_soft"
-                    app:cardBackgroundColor="@color/gray"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="2dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardViewUmidade">
-
-                    <TextView
-                        android:id="@+id/textTitleCardLight"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Luminosidade"
-                        android:textColor="@color/orange" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -128,11 +121,11 @@
                     android:id="@+id/btn_baixar_relatorio"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:text="Baixar Relatório"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardViewLuminosidade" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardViewUmidade" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
