--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,17 +129,17 @@
 
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="66dp"
-                        android:layout_height="35dp"
-                        android:layout_gravity="center|right"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/notification_icon" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageView2"-->
+<!--                        android:layout_width="66dp"-->
+<!--                        android:layout_height="35dp"-->
+<!--                        android:layout_gravity="center|right"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/notification_icon" />-->
 
                 </LinearLayout>
 
-                <ScrollView
+                <HorizontalScrollView
                     android:id="@+id/container_cards_sensores"
                     android:layout_width="0dp"
                     android:layout_height="150dp"
@@ -156,7 +156,7 @@
                         android:orientation="horizontal">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="370dp"
+                            android:layout_width="match_parent"
                             android:layout_height="140dp">
 
                             <androidx.cardview.widget.CardView
@@ -279,10 +279,71 @@
                                     android:text="Status Sensor"
                                     android:textSize="10sp" />
                             </androidx.cardview.widget.CardView>
+
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/card_gas"
+                                android:layout_width="250dp"
+                                android:layout_height="140dp"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="20dp"
+                                app:cardBackgroundColor="#E7E9FE"
+                                app:cardCornerRadius="10dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toEndOf="@+id/card_umidade"
+                                app:layout_constraintTop_toTopOf="parent">
+
+                                <ImageView
+                                    android:id="@+id/imageView3icoFlame"
+                                    android:layout_width="80dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="right|center_vertical"
+                                    android:layout_marginRight="20dp"
+                                    app:srcCompat="@drawable/flame" />
+
+                                <TextView
+                                    android:id="@+id/textViewGas"
+                                    android:layout_width="57dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="8dp"
+                                    android:text="Gases"
+                                    android:textColorLink="#111827"
+                                    android:textSize="8sp" />
+
+                                <TextView
+                                    android:id="@+id/txt_value_gas"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:text="48"
+                                    android:textColorLink="#3B82F6"
+                                    android:textSize="48sp" />
+
+                                <TextView
+                                    android:id="@+id/textViewGaspercent"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="70dp"
+                                    android:text="%"
+                                    android:textColorLink="#3B82F6"
+                                    android:textSize="34sp" />
+
+                                <TextView
+                                    android:id="@+id/txt_status_sensor_gas"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="bottom"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:text="Status Sensor"
+                                    android:textSize="10sp" />
+                            </androidx.cardview.widget.CardView>
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </LinearLayout>
-                </ScrollView>
+                </HorizontalScrollView>
 
                 <TextView
                     android:id="@+id/textView4"
