--- a/app/src/main/res/layout/graphics_activity.xml
+++ b/app/src/main/res/layout/graphics_activity.xml
@@ -5,13 +5,13 @@
     android:id="@+id/graphicsview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="?attr/colorSurface">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_graphics"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:background="@color/background"
+        android:background="?attr/colorSurface"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
                     android:layout_height="300dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/purple_soft"
-                    app:cardBackgroundColor="@color/gray"
+                    app:cardBackgroundColor="?attr/colorSurface"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
                     android:layout_height="300dp"
                     android:layout_marginTop="20dp"
                     android:background="@color/purple_soft"
-                    app:cardBackgroundColor="@color/gray"
+                    app:cardBackgroundColor="?attr/colorSurface"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
